# gluu-patch

./: README.md  pyproject.toml
src/: gluu.py  util.py
src/create/: __init__.py  blockBuilder.py  bundleBuilder.py  create.py
src/patcher/: __init__.py  block_generator.py  change_log.py  cleaner.py  downloader.py  file_patcher.py  patch_data.py
tests/: test_comprehensive.py  test_create.py  test_download.py  test_patch.py
