[project]
name = "gluu"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "fastcdc (>=1.7.0,<2.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "aiofiles (>=23.2.1,<24.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
gluu = "src.gluu:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
